--- a/源代码/MilitiaOrganizationSystem/MilitiaOrganizationSystem/MilitiaOrganizationSystem.csproj
+++ b/源代码/MilitiaOrganizationSystem/MilitiaOrganizationSystem/MilitiaOrganizationSystem.csproj
@@ -179,19 +179,25 @@
     <Compile Include="Forms\InfoStatisticsForm.Designer.cs">
       <DependentUpon>InfoStatisticsForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="Forms\LoginForm.cs">
+    <Compile Include="Forms\LoginForms\LoginForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Forms\LoginForm.Designer.cs">
+    <Compile Include="Forms\LoginForms\LoginForm.Designer.cs">
       <DependentUpon>LoginForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\LoginForms\ModifyPsdForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\LoginForms\ModifyPsdForm.Designer.cs">
+      <DependentUpon>ModifyPsdForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Config\PsdXmlConfig.cs" />
-    <Compile Include="Forms\SetForm.cs">
+    <Compile Include="Config\LoginXmlConfig.cs" />
+    <Compile Include="Forms\LoginForms\SetForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Forms\SetForm.Designer.cs">
+    <Compile Include="Forms\LoginForms\SetForm.Designer.cs">
       <DependentUpon>SetForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Sql\SqlBiz.cs" />
@@ -250,8 +256,11 @@
     <EmbeddedResource Include="Forms\InfoStatisticsForm.resx">
       <DependentUpon>InfoStatisticsForm.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Forms\LoginForm.resx">
+    <EmbeddedResource Include="Forms\LoginForms\LoginForm.resx">
       <DependentUpon>LoginForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\LoginForms\ModifyPsdForm.resx">
+      <DependentUpon>ModifyPsdForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -265,7 +274,7 @@
     <EmbeddedResource Include="Forms\XMLGroupTaskForm.resx">
       <DependentUpon>XMLGroupTaskForm.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Forms\SetForm.resx">
+    <EmbeddedResource Include="Forms\LoginForms\SetForm.resx">
       <DependentUpon>SetForm.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="packages.config" />
@@ -297,6 +306,7 @@
       <Install>false</Install>
     </BootstrapperPackage>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
